# new_fastapi_project

./: .replit  README.md  main.py  pyproject.toml
