[tool.poetry]
name = "new_fastapi_project"
version = "0.1.0"
description = "No Description Available"
authors = ["Shrikant Dhayje <shrikantdhayaje@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
